[package]
name = "webrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
select = "0.5"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
regex = "1.5"
html5ever = "0.26"
html2text = "0.4"
scraper = "0.12"
csv = "1.1"
rmp = "0.8.12"
rmp-serde = "0.15"
toml = "0.5"
serde = "1.0"
serde_yaml = "0.8"
serde-xml-rs = "0.5"
xml-rs = "0.8.19"
image = "0.23"
rusttype = "0.8"